--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
     - Cronograma e Entregas: cronograma-entregas.md
     - Interação Equipe-Cliente: interacao-equipe-cliente.md
     - Lições Aprendidas: licoes-aprendidas.md
+    - Entregas: entregas.md
   - Guias Técnicos:
     - Instalação: instalacao.md
     - Uso: uso.md
