--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,9 +2,9 @@ name: Deploy Docs to GitHub Pages
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ gitHub-pages ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ gitHub-pages ]
 
 permissions:
   contents: read
@@ -57,7 +57,7 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/gitHub-pages'
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
