--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,11 +1,11 @@
 site_name: Sistema de Gestão de Recursos - Softex
 site_description: Sistema centralizado de gestão de recursos físicos para a Softex
 site_author: Equipe REQ-2025.2-T01
-site_url: https://seu-usuario.github.io/REQ-2025.2-T01-Softex
+site_url: https://felipe.github.io/REQ-2025.2-T01-Softex
 
 # Repository
-repo_name: seu-usuario/REQ-2025.2-T01-Softex
-repo_url: https://github.com/seu-usuario/REQ-2025.2-T01-Softex
+repo_name: felipe/REQ-2025.2-T01-Softex
+repo_url: https://github.com/felipe/REQ-2025.2-T01-Softex
 
 # Copyright
 copyright: Copyright &copy; 2025 Equipe REQ-2025.2-T01 - Softex
@@ -61,9 +61,9 @@ nav:
 extra:
   social:
     - icon: fontawesome/brands/github
-      link: https://github.com/seu-usuario
+      link: https://github.com/felipe
     - icon: fontawesome/brands/linkedin
-      link: https://linkedin.com/in/seu-usuario
+      link: https://linkedin.com/in/felipe
 
 # CSS personalizado
 extra_css:
