--- a/docs-astro/package.json
+++ b/docs-astro/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "docs-astro",
+  "name": "softex-docs",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@astrojs/starlight": "^0.36.0",
+    "@fontsource/geist-mono": "^5.2.7",
+    "@fontsource/geist-sans": "^5.2.5",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "starlight-theme-rapide": "^0.5.1"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
