--- a/docs-astro/tsconfig.json
+++ b/docs-astro/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "astro/tsconfigs/base",
-  "include": ["src/**/*", "astro.config.mjs"],
-  "exclude": ["dist", "node_modules"]
+	"extends": "astro/tsconfigs/strict",
+	"include": ["src/**/*", "astro.config.mjs"],
+	"exclude": ["dist", "node_modules"]
 }
