--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,47 +10,59 @@ jobs:
   backend:
     name: Backend (Python/DRF)
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
-      - name: Install dependencies
+
+      - name: Install dependencies for quality checks
         run: |
           python -m pip install --upgrade pip
-          pip install -r backend/requirements.txt
           pip install black flake8 bandit pytest pytest-django pytest-cov
+
       - name: Lint with flake8
         run: flake8 backend/
+
       - name: Check formatting with black
         run: black --check backend/
+
       - name: Security scan with bandit
         run: bandit -r backend/
+
       - name: Run tests
         run: pytest backend/ --cov=backend
 
   frontend:
     name: Frontend (Vue.js)
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+
       - name: Install dependencies
         run: |
           cd frontend
           npm ci
+
       - name: Run ESLint
         run: |
           cd frontend
           npx eslint .
+
       - name: Check formatting with Prettier
         run: |
           cd frontend
           npx prettier --check "src/**/*.{js,vue}"
+
       - name: Run unit tests
         run: |
           cd frontend
