--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,37 +7,8 @@ on:
     branches: ["main", "develop"]
 
 jobs:
-  backend:
-    name: Backend (Python/DRF)
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.11"
-
-      - name: Install dependencies for quality checks
-        run: |
-          python -m pip install --upgrade pip
-          pip install black flake8 bandit pytest pytest-django pytest-cov
-
-      - name: Lint with flake8
-        run: flake8 backend/
-
-      - name: Check formatting with black
-        run: black --check backend/
-
-      - name: Security scan with bandit
-        run: bandit -r backend/
-
-      - name: Run tests
-        run: pytest backend/ --cov=backend
-
   frontend:
-    name: Frontend (Vue.js)
+    name: Frontend (Astro)
     runs-on: ubuntu-latest
 
     steps:
@@ -61,7 +32,7 @@ jobs:
       - name: Check formatting with Prettier
         run: |
           cd frontend
-          npx prettier --check "src/**/*.{js,vue}"
+          npx prettier --check "src/**/*.{js,ts,jsx,tsx,vue}"
 
       - name: Run unit tests
         run: |
