fix(eslint): troca eslint.config.mjs por .eslintrc.js compatível

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Check formatting with black
         run: |
           cd backend
-          black --check .
+          black .
 
       - name: Security scan with bandit
         run: |
